making it pixel perfect

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 
 
     </header>
-    <div class="fix">
+    <!-- <div class="fix">
         <img class="img2" src="assets/icon1.webp" alt="">
         <div class="mobile">
             <a href="">Login</a>
@@ -99,7 +99,7 @@
             <button class="button2">Sign Up</button>
         </div>
 
-    </div>
+    </div> -->
 
     <section class="bannerflex ">
         <div class="buttondiv">
