making it pixel perfect

--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
                         <img src="https://cdn.doordash.com/media/consumer/home/landing/new/ScootScoot.svg" alt="scooty">
 
                     </div>
-                    <div>
+                    <div class="feac"> 
                         <h2>Become a Dasher</h2>
                         <h3>As a delivery driver, make money and work on your schedule. Sign up in minutes.</h3>
                         <div class="anchors">
@@ -327,7 +327,7 @@
                         <img src="https://cdn.doordash.com/media/consumer/home/landing/new/Storefront.svg" alt="">
 
                     </div>
-                    <div>
+                    <div class="feac">
                         <h2>Become a Merchant</h2>
                         <h3>
                             Attract new customers and grow sales, starting with 0% commissions for up to 30 days.
@@ -350,7 +350,7 @@
                         <img src="https://cdn.doordash.com/media/consumer/home/landing/new/iphone.svg" alt="">
 
                     </div>
-                    <div>
+                    <div class="feac">
                         <h2>Get the best DoorDash experience</h2>
                         <h3>Experience the best your neighborhood has to offer, all in one app.</h3>
                         <div class="anchors">
