making it pixel perfect

--- a/index.html
+++ b/index.html
@@ -300,74 +300,78 @@
 
     <div class="wrapf">
         <section class="featured ">
-            <ul>
-                <li class="dasher">
-                    <div class="image">
-                        <img src="https://cdn.doordash.com/media/consumer/home/landing/new/ScootScoot.svg" alt="scooty">
+            <div class="setwidth">
+                <ul>
+                    <li class="dasher">
+                        <div class="image">
+                            <img src="https://cdn.doordash.com/media/consumer/home/landing/new/ScootScoot.svg"
+                                alt="scooty">
 
-                    </div>
-                    <div class="feac"> 
-                        <h2>Become a Dasher</h2>
-                        <h3>As a delivery driver, make money and work on your schedule. Sign up in minutes.</h3>
-                        <div class="anchors">
-                            <a href="">Start earning </a>
-                            <svg width="16" height="16" viewBox="0 0 16 16" fill="none"
-                                xmlns="http://www.w3.org/2000/svg" aria-hidden="true"
-                                class="StyledInlineSvg-sc-45a1y2-0 gfYsDE sc-1f772c23-4 quRma fetched-icon">
-                                <path
-                                    d="M8.29289 11.2929C7.90237 11.6834 7.90237 12.3166 8.29289 12.7071C8.68342 13.0976 9.31658 13.0976 9.70711 12.7071L13.7071 8.70711C14.0976 8.31658 14.0976 7.68342 13.7071 7.29289L9.70711 3.29289C9.31658 2.90237 8.68342 2.90237 8.29289 3.29289C7.90237 3.68342 7.90237 4.31658 8.29289 4.70711L10.5858 7L3 7C2.44772 7 2 7.44771 2 8C2 8.55228 2.44772 9 3 9L10.5858 9L8.29289 11.2929Z"
-                                    fill="#eb1700"></path>
-                            </svg>
                         </div>
+                        <div class="feac">
+                            <h2>Become a Dasher</h2>
+                            <h3>As a delivery driver, make money and work on your schedule. Sign up in minutes.</h3>
+                            <div class="anchors">
+                                <a href="">Start earning </a>
+                                <svg width="16" height="16" viewBox="0 0 16 16" fill="none"
+                                    xmlns="http://www.w3.org/2000/svg" aria-hidden="true"
+                                    class="StyledInlineSvg-sc-45a1y2-0 gfYsDE sc-1f772c23-4 quRma fetched-icon">
+                                    <path
+                                        d="M8.29289 11.2929C7.90237 11.6834 7.90237 12.3166 8.29289 12.7071C8.68342 13.0976 9.31658 13.0976 9.70711 12.7071L13.7071 8.70711C14.0976 8.31658 14.0976 7.68342 13.7071 7.29289L9.70711 3.29289C9.31658 2.90237 8.68342 2.90237 8.29289 3.29289C7.90237 3.68342 7.90237 4.31658 8.29289 4.70711L10.5858 7L3 7C2.44772 7 2 7.44771 2 8C2 8.55228 2.44772 9 3 9L10.5858 9L8.29289 11.2929Z"
+                                        fill="#eb1700"></path>
+                                </svg>
+                            </div>
 
-                    </div>
-                </li>
-                <li class="merchant">
-                    <div class="image">
-                        <img src="https://cdn.doordash.com/media/consumer/home/landing/new/Storefront.svg" alt="">
-
-                    </div>
-                    <div class="feac">
-                        <h2>Become a Merchant</h2>
-                        <h3>
-                            Attract new customers and grow sales, starting with 0% commissions for up to 30 days.
-                        </h3>
-                        <div class="anchors">
-                            <a href="">Sign up for DoorDash </a>
-                            <svg width="16" height="16" viewBox="0 0 16 16" fill="none"
-                                xmlns="http://www.w3.org/2000/svg" aria-hidden="true"
-                                class="StyledInlineSvg-sc-45a1y2-0 gfYsDE sc-1f772c23-4 quRma fetched-icon">
-                                <path
-                                    d="M8.29289 11.2929C7.90237 11.6834 7.90237 12.3166 8.29289 12.7071C8.68342 13.0976 9.31658 13.0976 9.70711 12.7071L13.7071 8.70711C14.0976 8.31658 14.0976 7.68342 13.7071 7.29289L9.70711 3.29289C9.31658 2.90237 8.68342 2.90237 8.29289 3.29289C7.90237 3.68342 7.90237 4.31658 8.29289 4.70711L10.5858 7L3 7C2.44772 7 2 7.44771 2 8C2 8.55228 2.44772 9 3 9L10.5858 9L8.29289 11.2929Z"
-                                    fill="#eb1700"></path>
-                            </svg>
                         </div>
+                    </li>
+                    <li class="merchant">
+                        <div class="image">
+                            <img src="https://cdn.doordash.com/media/consumer/home/landing/new/Storefront.svg" alt="">
 
-                    </div>
-                </li>
-                <li class="expirience">
-                    <div class="image">
-                        <img src="https://cdn.doordash.com/media/consumer/home/landing/new/iphone.svg" alt="">
-
-                    </div>
-                    <div class="feac">
-                        <h2>Get the best DoorDash experience</h2>
-                        <h3>Experience the best your neighborhood has to offer, all in one app.</h3>
-                        <div class="anchors">
-                            <a href="">Get the app </a>
-
-                            <svg width="16" height="16" viewBox="0 0 16 16" fill="none"
-                                xmlns="http://www.w3.org/2000/svg" aria-hidden="true"
-                                class="StyledInlineSvg-sc-45a1y2-0 gfYsDE sc-1f772c23-4 quRma fetched-icon">
-                                <path
-                                    d="M8.29289 11.2929C7.90237 11.6834 7.90237 12.3166 8.29289 12.7071C8.68342 13.0976 9.31658 13.0976 9.70711 12.7071L13.7071 8.70711C14.0976 8.31658 14.0976 7.68342 13.7071 7.29289L9.70711 3.29289C9.31658 2.90237 8.68342 2.90237 8.29289 3.29289C7.90237 3.68342 7.90237 4.31658 8.29289 4.70711L10.5858 7L3 7C2.44772 7 2 7.44771 2 8C2 8.55228 2.44772 9 3 9L10.5858 9L8.29289 11.2929Z"
-                                    fill="#eb1700"></path>
-                            </svg>
                         </div>
+                        <div class="feac">
+                            <h2>Become a Merchant</h2>
+                            <h3>
+                                Attract new customers and grow sales, starting with 0% commissions for up to 30 days.
+                            </h3>
+                            <div class="anchors">
+                                <a href="">Sign up for DoorDash </a>
+                                <svg width="16" height="16" viewBox="0 0 16 16" fill="none"
+                                    xmlns="http://www.w3.org/2000/svg" aria-hidden="true"
+                                    class="StyledInlineSvg-sc-45a1y2-0 gfYsDE sc-1f772c23-4 quRma fetched-icon">
+                                    <path
+                                        d="M8.29289 11.2929C7.90237 11.6834 7.90237 12.3166 8.29289 12.7071C8.68342 13.0976 9.31658 13.0976 9.70711 12.7071L13.7071 8.70711C14.0976 8.31658 14.0976 7.68342 13.7071 7.29289L9.70711 3.29289C9.31658 2.90237 8.68342 2.90237 8.29289 3.29289C7.90237 3.68342 7.90237 4.31658 8.29289 4.70711L10.5858 7L3 7C2.44772 7 2 7.44771 2 8C2 8.55228 2.44772 9 3 9L10.5858 9L8.29289 11.2929Z"
+                                        fill="#eb1700"></path>
+                                </svg>
+                            </div>
 
-                    </div>
-                </li>
-            </ul>
+                        </div>
+                    </li>
+                    <li class="expirience">
+                        <div class="image">
+                            <img src="https://cdn.doordash.com/media/consumer/home/landing/new/iphone.svg" alt="">
+
+                        </div>
+                        <div class="feac">
+                            <h2>Get the best DoorDash experience</h2>
+                            <h3>Experience the best your neighborhood has to offer, all in one app.</h3>
+                            <div class="anchors">
+                                <a href="">Get the app </a>
+
+                                <svg width="16" height="16" viewBox="0 0 16 16" fill="none"
+                                    xmlns="http://www.w3.org/2000/svg" aria-hidden="true"
+                                    class="StyledInlineSvg-sc-45a1y2-0 gfYsDE sc-1f772c23-4 quRma fetched-icon">
+                                    <path
+                                        d="M8.29289 11.2929C7.90237 11.6834 7.90237 12.3166 8.29289 12.7071C8.68342 13.0976 9.31658 13.0976 9.70711 12.7071L13.7071 8.70711C14.0976 8.31658 14.0976 7.68342 13.7071 7.29289L9.70711 3.29289C9.31658 2.90237 8.68342 2.90237 8.29289 3.29289C7.90237 3.68342 7.90237 4.31658 8.29289 4.70711L10.5858 7L3 7C2.44772 7 2 7.44771 2 8C2 8.55228 2.44772 9 3 9L10.5858 9L8.29289 11.2929Z"
+                                        fill="#eb1700"></path>
+                                </svg>
+                            </div>
+
+                        </div>
+                    </li>
+                </ul>
+            </div>
+
         </section>
     </div>
 
@@ -375,22 +379,27 @@
         <div class="bg">
             <div class="content">
                 <div class="find">
-                    <img src="assets/eat.png" alt="">
-                    <div>
+                    <div class="image">
+                        <img src="assets/eat.png" alt="">
+                    </div>
+
+                    <div class="my">
                         <h3>Everything you crave, delivered.</h3>
-                        <h5>Your favorite local restraurants</h5>
+                        <h5 >Your favorite local restraurants</h5>
                         <p>
                             Get a slice of pizza or the whole pie delivered, or pick up house lo mein from the Chinese
                             takeout spot you've been meaning to try.
                         </p>
-                        <button>Find resraurants</button>
+                        <button>Find restaurants</button>
                     </div>
                 </div>
 
                 <div class="dashpass">
+                    <div class="image">
+                        <img src="assets/dashpass_mobile.avif" alt="">
 
-                    <img src="assets/dashpass_mobile.avif" alt="">
-                    <div>
+                    </div>
+                    <div class="my">
                         <h3>DashPass is delivery for less</h3>
                         <p>Members get a $0 delivery fee on DashPass orders, 5% back on pickup orders, and so much more.
                             Plus, it's free for 30 days.
@@ -406,21 +415,28 @@
 
         <div class="groceries ">
             <div class="text">
-                <h3>Get grocery and convinience store essentials</h3>
-                <h5>Grocery delivery, exactly how you want it.</h5>
-                <p>Shop from home and fill your cart with fresh produce, frozen entrees, deli delights and more.</p>
+                <h1>Get grocery and convinience store essentials</h1>
+                <h2>Grocery delivery, exactly how you want it.</h2>
+                <span>Shop from home and fill your cart with fresh produce, frozen entrees, deli delights and more.</span>
                 <button>Shop Groceries</button>
             </div>
 
         </div>
+        <div class="content">
+            <div class="shop">
+                <div class="image">
+                    <img src="assets/cover.png" alt="">
 
-        <div class="shop">
-            <img src="assets/cover.png" alt="">
-            <div>
-                <h3>Convenience stores at your doorstep</h3>
-                <p>Stock up on snacks, household essentials, candy, or vitamins — all delivered in under an hour.</p>
-                <button>Shop now</button>
+                </div>
+                <div class="my">
+                    <h3>Convenience stores at your doorstep</h3>
+                    <p>Stock up on snacks, household essentials, candy, or vitamins — all delivered in under an hour.
+                    </p>
+                    <button>Shop Now</button>
+                </div>
             </div>
+
+
 
         </div>
 
@@ -433,6 +449,7 @@
         </div>
         <div class="feaflex">
             <div class="beauty">
+
                 <img src="assets/beauty_desktop.avif" alt="">
                 <h2>Beauty essentials from top brands</h3>
                     <p>Get all your beauty and self-care needs delivered at home or on-the-go</p>
@@ -472,8 +489,11 @@
         <div class="bg">
             <div class="content">
                 <div class="dasher">
-                    <img src="assets/become_a_dasher_desktop.avif" alt="">
-                    <div>
+                    <div class="image">
+                        <img src="assets/become_a_dasher_desktop.avif" alt="">
+
+                    </div>
+                    <div class="my">
                         <h3>Sign up to dash and get paid</h3>
                         <p>Deliver with the #1 Food and Drink App in the U.S. As a delivery driver, you'll make money
                             and work on your schedule. Sign up in minutes.</p>
@@ -482,8 +502,11 @@
 
                 </div>
                 <div class="partner ">
-                    <img src="assets/work_with_doordash_desktop.avif" alt="">
-                    <div>
+                    <div class="image">
+                        <img src="assets/work_with_doordash_desktop.avif" alt="">
+
+                    </div>
+                    <div class="my">
                         <h3>Grow your business with DoorDash</h3>
                         <p>Businesses large and small partner with DoorDash to reach new customers, increase order
                             volume, and drive more sales.</p>
