making tablet size pixel perfect

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
 
     <header>
-        <div class="head grid">
+        <div class="head">
             <div class="svg">
                 <svg width="64" height="64" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"
                     aria-hidden="true" class="StyledInlineSvg-sc-45a1y2-0 gfYsDE sc-97811b6f-1 ijOhfZ fetched-icon">
@@ -448,35 +448,39 @@
         <div class="feahead">
             <h1>Helping you with to-dos and gifting </h1>
         </div>
-        <div class="feaflex">
-            <div class="beauty">
+        <div class="feaflexx">
+            <div class="feaflex">
+                <div class="beauty">
 
-                <img src="assets/beauty_desktop.avif" alt="">
-                <h2>Beauty essentials from top brands</h3>
+                    <img src="assets/beauty_desktop.avif" alt="">
+                    <h2>Beauty essentials from top brands</h2>
                     <p>Get all your beauty and self-care needs delivered at home or on-the-go</p>
                     <button>Shop beauty</button>
-            </div>
-            <div class="flowers">
-                <img src="assets/flowers_desktop.avif" alt="">
-                <h2>FLowers for any occasion</h3>
+                </div>
+                <div class="flowers">
+                    <img src="assets/flowers_desktop.avif" alt="">
+                    <h2>Flowers for any occasion</h2>
                     <p>Shop hand-picked and thoughtfully-arranged blooms from florists near you.</p>
                     <button>Send Flowers</button>
-            </div>
-            <div class="alcohol">
-                <img src="assets/alcohol_desktop.avif" alt="">
-                <h2>Restock the minibar</h3>
+                </div>
+
+                <div class="alcohol">
+                    <img src="assets/alcohol_desktop.avif" alt="">
+                    <h2>Restock the minibar</h2>
                     <p>Hosting a get-together or need or need a special cocktail ingredient? Get liquor, beer, mixers,
                         champagne and wine delivered fast.*</p>
                     <button>Shop alcohol</button>
                     <p class="care">*Must be 21+. Enjoy responsibly</p>
-            </div>
-            <div class="pet">
-                <img src="assets/pet_supplies_desktop.avif" alt="">
-                <h2>What your pets need, and want</h3>
+                </div>
+                <div class="pet">
+                    <img src="assets/pet_supplies_desktop.avif" alt="">
+                    <h2>What your pets need, and want</h2>
                     <p>Finally, something cat people and dog people agree on — pet supplies delivery. Shop pet food,
                         chew toys, and even costumes.</p>
                     <button>Get Pet Supplies</button>
+                </div>
             </div>
+
         </div>
 
 
@@ -838,8 +842,12 @@
         <div class="tab">
 
             <div class="last">
-                <div> 
-                    <svg aria-hidden="true" width="32" height="18" viewBox="0 0 99.5 56.5" fill="#f1f1f1"><path d="M95.64,13.38A25.24,25.24,0,0,0,73.27,0H2.43A2.44,2.44,0,0,0,.72,4.16L16.15,19.68a7.26,7.26,0,0,0,5.15,2.14H71.24a6.44,6.44,0,1,1,.13,12.88H36.94a2.44,2.44,0,0,0-1.72,4.16L50.66,54.39a7.25,7.25,0,0,0,5.15,2.14H71.38c20.26,0,35.58-21.66,24.26-43.16"></path></svg>
+                <div>
+                    <svg aria-hidden="true" width="32" height="18" viewBox="0 0 99.5 56.5" fill="#f1f1f1">
+                        <path
+                            d="M95.64,13.38A25.24,25.24,0,0,0,73.27,0H2.43A2.44,2.44,0,0,0,.72,4.16L16.15,19.68a7.26,7.26,0,0,0,5.15,2.14H71.24a6.44,6.44,0,1,1,.13,12.88H36.94a2.44,2.44,0,0,0-1.72,4.16L50.66,54.39a7.25,7.25,0,0,0,5.15,2.14H71.38c20.26,0,35.58-21.66,24.26-43.16">
+                        </path>
+                    </svg>
                 </div>
                 <a>Terms of Service</a>
                 <a>Privacy</a>
