tablet size pixel perfect completed

--- a/index.html
+++ b/index.html
@@ -415,7 +415,7 @@
 
         <div class="groceries ">
             <div class="text">
-                <h1>Get grocery and convinience store essentials</h1>
+                <h1>Get grocery and convenience store essentials</h1>
                 <h2>Grocery delivery, exactly how you want it.</h2>
                 <span>Shop from home and fill your cart with fresh produce, frozen entrees, deli delights and
                     more.</span>
@@ -451,29 +451,41 @@
         <div class="feaflexx">
             <div class="feaflex">
                 <div class="beauty">
-
+                    <div class="image">
                     <img src="assets/beauty_desktop.avif" alt="">
+
+                    </div>
+
                     <h2>Beauty essentials from top brands</h2>
                     <p>Get all your beauty and self-care needs delivered at home or on-the-go</p>
                     <button>Shop beauty</button>
                 </div>
                 <div class="flowers">
+                    <div class="image">
                     <img src="assets/flowers_desktop.avif" alt="">
+
+                    </div>
                     <h2>Flowers for any occasion</h2>
                     <p>Shop hand-picked and thoughtfully-arranged blooms from florists near you.</p>
                     <button>Send Flowers</button>
                 </div>
 
                 <div class="alcohol">
+                    <div class="image">
                     <img src="assets/alcohol_desktop.avif" alt="">
+
+                    </div>
                     <h2>Restock the minibar</h2>
                     <p>Hosting a get-together or need or need a special cocktail ingredient? Get liquor, beer, mixers,
                         champagne and wine delivered fast.*</p>
-                    <button>Shop alcohol</button>
+                    <button>Shop Alcohol</button>
                     <p class="care">*Must be 21+. Enjoy responsibly</p>
                 </div>
                 <div class="pet">
+                    <div class="image">
                     <img src="assets/pet_supplies_desktop.avif" alt="">
+
+                    </div>
                     <h2>What your pets need, and want</h2>
                     <p>Finally, something cat people and dog people agree on — pet supplies delivery. Shop pet food,
                         chew toys, and even costumes.</p>
@@ -556,7 +568,7 @@
                     <li>Seattle</li>
                     <li>Atlanta</li>
                     <li>Queens</li>
-                    <li>Vancour,Bc</li>
+                    <li>Vancouver, BC</li>
                     <li>Miami</li>
                     <li>San Antonio</li>
                 </ul>
@@ -589,7 +601,7 @@
 
                 <div class="cat1">
                     <a href="#">Alcohol Australia</a>
-                    <a href="#">Alcohol Australia</a>
+                    <a href="#">Alcohol Delivery Australia</a>
                     <a href="#">Back To School Delivery</a>
                     <a href="#">Battle Of The Brands</a>
                     <a href="#">Beauty Stores</a>
@@ -819,20 +831,19 @@
 
                 <div class="let">
                     <h4>Let Us Help You</h4>
-                    <ul>
-                        <li><a href="#">Account Details</a></li>
-                        <li><a href="#">Order History</a></li>
-                        <li><a href="#">Help</a></li>
-                    </ul>
+                    <a href="#">Account Details</a>
+                    <a href="#">Order History</a>
+                    <a href="#">Help</a>
+
                 </div>
                 <div class="doing">
                     <h4>Doing Business</h4>
-                    <ul>
-                        <li><a href="#">Become a Dasher</a></li>
-                        <li><a href="#">DoorDash Merchant</a></li>
-                        <li><a href="#">Get Dashers for Deliveries</a></li>
-                        <li><a href="#">Get DoorDash for Business</a></li>
-                    </ul>
+
+                    <a href="#">Become a Dasher</a>
+                    <a href="#">DoorDash Merchant</a>
+                    <a href="#">Get Dashers for Deliveries</a>
+                    <a href="#">Get DoorDash for Business</a>
+
                 </div>
             </div>
         </div>
