desktop site pixel perfect completed

--- a/index.html
+++ b/index.html
@@ -378,36 +378,43 @@
     <section class="services ">
         <div class="bg">
             <div class="content">
-                <div class="find">
-                    <div class="image">
-                        <img src="assets/eat.png" alt="">
+
+
+                <div class="o">
+                    <div class="find">
+                        <div class="image">
+                            <img src="assets/eat.png" alt="">
+                        </div>
+
+                        <div class="my">
+                            <h3>Everything you crave, delivered.</h3>
+                            <h5>Your favorite local restraurants</h5>
+                            <p>
+                                Get a slice of pizza or the whole pie delivered, or pick up house lo mein from the
+                                Chinese
+                                takeout spot you've been meaning to try.
+                            </p>
+                            <button>Find restaurants</button>
+                        </div>
                     </div>
 
-                    <div class="my">
-                        <h3>Everything you crave, delivered.</h3>
-                        <h5>Your favorite local restraurants</h5>
-                        <p>
-                            Get a slice of pizza or the whole pie delivered, or pick up house lo mein from the Chinese
-                            takeout spot you've been meaning to try.
-                        </p>
-                        <button>Find restaurants</button>
-                    </div>
                 </div>
 
-                <div class="dashpass">
-                    <div class="image">
-                        <img src="assets/dashpass_mobile.avif" alt="">
+                <div class="o">
+                    <div class="dashpass">
+                        <div class="image">
+                            <img src="assets/dashpass_mobile.avif" alt="">
 
+                        </div>
+                        <div class="my">
+                            <h3>DashPass is delivery for less</h3>
+                            <p>Members get a $0 delivery fee on DashPass orders, 5% back on pickup orders, and so much
+                                more.
+                                Plus, it's free for 30 days.
+                            </p>
+                            <button>Get DashPass</button>
+                        </div>
                     </div>
-                    <div class="my">
-                        <h3>DashPass is delivery for less</h3>
-                        <p>Members get a $0 delivery fee on DashPass orders, 5% back on pickup orders, and so much more.
-                            Plus, it's free for 30 days.
-                        </p>
-                        <button>Get DashPass</button>
-                    </div>
-
-
                 </div>
             </div>
 
@@ -424,18 +431,22 @@
 
         </div>
         <div class="content">
-            <div class="shop">
-                <div class="image">
-                    <img src="assets/cover.png" alt="">
+            <div class="o">
+                <div class="shop">
+                    <div class="image">
+                        <img src="assets/cover.png" alt="">
 
-                </div>
-                <div class="my">
-                    <h3>Convenience stores at your doorstep</h3>
-                    <p>Stock up on snacks, household essentials, candy, or vitamins — all delivered in under an hour.
-                    </p>
-                    <button>Shop Now</button>
+                    </div>
+                    <div class="my">
+                        <h3>Convenience stores at your doorstep</h3>
+                        <p>Stock up on snacks, household essentials, candy, or vitamins — all delivered in under an
+                            hour.
+                        </p>
+                        <button>Shop Now</button>
+                    </div>
                 </div>
             </div>
+
 
 
 
@@ -452,7 +463,7 @@
             <div class="feaflex">
                 <div class="beauty">
                     <div class="image">
-                    <img src="assets/beauty_desktop.avif" alt="">
+                        <img src="assets/beauty_desktop.avif" alt="">
 
                     </div>
 
@@ -462,7 +473,7 @@
                 </div>
                 <div class="flowers">
                     <div class="image">
-                    <img src="assets/flowers_desktop.avif" alt="">
+                        <img src="assets/flowers_desktop.avif" alt="">
 
                     </div>
                     <h2>Flowers for any occasion</h2>
@@ -472,7 +483,7 @@
 
                 <div class="alcohol">
                     <div class="image">
-                    <img src="assets/alcohol_desktop.avif" alt="">
+                        <img src="assets/alcohol_desktop.avif" alt="">
 
                     </div>
                     <h2>Restock the minibar</h2>
@@ -483,7 +494,7 @@
                 </div>
                 <div class="pet">
                     <div class="image">
-                    <img src="assets/pet_supplies_desktop.avif" alt="">
+                        <img src="assets/pet_supplies_desktop.avif" alt="">
 
                     </div>
                     <h2>What your pets need, and want</h2>
@@ -505,32 +516,39 @@
         </div>
         <div class="bg">
             <div class="content">
-                <div class="dasher">
-                    <div class="image">
-                        <img src="assets/become_a_dasher_desktop.avif" alt="">
+                <div class="o">
+                    <div class="dasher">
+                        <div class="image">
+                            <img src="assets/become_a_dasher_desktop.avif" alt="">
+
+                        </div>
+                        <div class="my">
+                            <h3>Sign up to dash and get paid</h3>
+                            <p>Deliver with the #1 Food and Drink App in the U.S. As a delivery driver, you'll make
+                                money
+                                and work on your schedule. Sign up in minutes.</p>
+                            <button>Become a Dasher</button>
+                        </div>
 
                     </div>
-                    <div class="my">
-                        <h3>Sign up to dash and get paid</h3>
-                        <p>Deliver with the #1 Food and Drink App in the U.S. As a delivery driver, you'll make money
-                            and work on your schedule. Sign up in minutes.</p>
-                        <button>Become a Dasher</button>
-                    </div>
-
                 </div>
-                <div class="partner ">
-                    <div class="image">
-                        <img src="assets/work_with_doordash_desktop.avif" alt="">
+                <div class="o">
+                    <div class="partner ">
+                        <div class="image">
+                            <img src="assets/work_with_doordash_desktop.avif" alt="">
+
+                        </div>
+                        <div class="my">
+                            <h3>Grow your business with DoorDash</h3>
+                            <p>Businesses large and small partner with DoorDash to reach new customers, increase order
+                                volume, and drive more sales.</p>
+                            <button>Become a Partner</button>
+                        </div>
 
                     </div>
-                    <div class="my">
-                        <h3>Grow your business with DoorDash</h3>
-                        <p>Businesses large and small partner with DoorDash to reach new customers, increase order
-                            volume, and drive more sales.</p>
-                        <button>Become a Partner</button>
-                    </div>
-
                 </div>
+
+
             </div>
 
         </div>
