photos added using picture tag

--- a/index.html
+++ b/index.html
@@ -383,7 +383,11 @@
                 <div class="o">
                     <div class="find">
                         <div class="image">
-                            <img src="assets/eat.png" alt="">
+                            <!-- <img src="assets/eat.png" alt=""> -->
+                            <picture>
+                                <source media="(min-width: 768px)" srcset="assets/eat.png">
+                                <img src="assets/find.avif" alt="">
+                            </picture>
                         </div>
 
                         <div class="my">
@@ -403,7 +407,11 @@
                 <div class="o">
                     <div class="dashpass">
                         <div class="image">
-                            <img src="assets/dashpass_mobile.avif" alt="">
+                            <!-- <img src="assets/dashpass_mobile.avif" alt=""> -->
+                            <picture>
+                                <source media="(min-width: 768px)" srcset="assets/dashpass_mobile.avif">
+                                <img src="assets/get.avif" alt="">
+                            </picture>
 
                         </div>
                         <div class="my">
@@ -434,7 +442,11 @@
             <div class="o">
                 <div class="shop">
                     <div class="image">
-                        <img src="assets/cover.png" alt="">
+                        <!-- <img src="assets/cover.png" alt=""> -->
+                           <picture>
+                                <source media="(min-width: 768px)" srcset="assets/cover.png">
+                                <img src="assets/shop.avif" alt="">
+                            </picture>
 
                     </div>
                     <div class="my">
@@ -463,8 +475,11 @@
             <div class="feaflex">
                 <div class="beauty">
                     <div class="image">
-                        <img src="assets/beauty_desktop.avif" alt="">
-
+                        <!-- <img src="assets/beauty_desktop.avif" alt=""> -->
+                        <picture>
+                                <source media="(min-width: 768px)" srcset="assets/beauty_desktop.avif">
+                                <img src="assets/beauty.avif" alt="">
+                            </picture>
                     </div>
 
                     <h2>Beauty essentials from top brands</h2>
@@ -473,7 +488,11 @@
                 </div>
                 <div class="flowers">
                     <div class="image">
-                        <img src="assets/flowers_desktop.avif" alt="">
+                        <!-- <img src="assets/flowers_desktop.avif" alt=""> -->
+                          <picture>
+                                <source media="(min-width: 768px)" srcset="assets/flowers_desktop.avif">
+                                <img src="assets/flowers.avif" alt="">
+                            </picture>
 
                     </div>
                     <h2>Flowers for any occasion</h2>
@@ -483,7 +502,11 @@
 
                 <div class="alcohol">
                     <div class="image">
-                        <img src="assets/alcohol_desktop.avif" alt="">
+                        <!-- <img src="assets/alcohol_desktop.avif" alt=""> -->
+                          <picture>
+                                <source media="(min-width: 768px)" srcset="assets/alcohol_desktop.avif">
+                                <img src="assets/alcohol.avif" alt="">
+                            </picture>
 
                     </div>
                     <h2>Restock the minibar</h2>
@@ -494,7 +517,11 @@
                 </div>
                 <div class="pet">
                     <div class="image">
-                        <img src="assets/pet_supplies_desktop.avif" alt="">
+                        <!-- <img src="assets/pet_supplies_desktop.avif" alt=""> -->
+                          <picture>
+                                <source media="(min-width: 768px)" srcset="assets/pet_supplies_desktop.avif">
+                                <img src="assets/pet.avif" alt="">
+                            </picture>
 
                     </div>
                     <h2>What your pets need, and want</h2>
@@ -519,7 +546,11 @@
                 <div class="o">
                     <div class="dasher">
                         <div class="image">
-                            <img src="assets/become_a_dasher_desktop.avif" alt="">
+                            <!-- <img src="assets/become_a_dasher_desktop.avif" alt=""> -->
+                              <picture>
+                                <source media="(min-width: 768px)" srcset="assets/become_a_dasher_desktop.avif">
+                                <img src="assets/dasher.avif" alt="">
+                            </picture>
 
                         </div>
                         <div class="my">
@@ -535,7 +566,11 @@
                 <div class="o">
                     <div class="partner ">
                         <div class="image">
-                            <img src="assets/work_with_doordash_desktop.avif" alt="">
+                            <!-- <img src="assets/work_with_doordash_desktop.avif" alt=""> -->
+                              <picture>
+                                <source media="(min-width: 768px)" srcset="work_with_doordash_desktop.avif">
+                                <img src="assets/partner.avif" alt="">
+                            </picture>
 
                         </div>
                         <div class="my">
